Refactor collecting identifiers for syntax highlighting, fix #1